--- a/document/main_freemocap-nsf-pose-2024.tex
+++ b/document/main_freemocap-nsf-pose-2024.tex
@@ -4,31 +4,31 @@
 % BEGIN DOCUMENT
 %----------------------------------------------------------------------------------------
 \begin{document}
-
+hi wow 
 %----------------------------------------------------------------------------------------
 %	SPECIFIC AIMS
 % -----------------------------------------------------------------------------------------
-\input{specific_aims/main_specific_aims}
+% \input{specific_aims/main_specific_aims}
 
 
 %----------------------------------------------------------------------------------------
 %	RESEARCH STRATEGY
 %-----------------------------------------------------------------------------------------
-\newpage
-\input{research_strategy/main_research_strategy}
+% \newpage
+% \input{research_strategy/main_research_strategy}
 
 
 
 %----------------------------------------------------------------------------------------
 %	Sub Components Boilerplate (Inclusion of children and stuff like that)
 %-----------------------------------------------------------------------------------------1111
-\input{boilerplate/main_boilerplate}
+% \input{boilerplate/main_boilerplate}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
-\newpage
-\input{bibliography/main_bibliography}
+% \newpage
+% \input{bibliography/main_bibliography}
 %----------------------------------------------------------------------------------------
 
 \end{document}
