--- a/document/header.tex
+++ b/document/header.tex
@@ -1,4 +1,5 @@
 % Your header content, e.g., packages, custom commands, etc.
+\documentclass{article}
 \usepackage{amsmath}
 \usepackage{graphicx}
 % Add more packages or custom commands as needed
