--- a/document/body/body.tex
+++ b/document/body/body.tex
@@ -1,6 +1,6 @@
 % Your main document content
 \section{Introduction}
-This is the introduction section. Wow. dd. ok
+This is the introduction section. Wow. dd. ok \cite{example}
 
 
 \section{Content}
