--- a/document/header.tex
+++ b/document/header.tex
@@ -2,6 +2,7 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[letterpaper,margin=1in]{geometry}
+\usepackage{cite}
 
 % Pseudodot: break up "clickable" strings like "Data.gov" which you can
 % enter as Data\pseudodot{}gov in your file.
