--- a/document/body/body.tex
+++ b/document/body/body.tex
@@ -2,6 +2,6 @@
 \section{Introduction}
 This is the introduction section. Wow. dd. ok 
 
-
+@caoOpenPoseRealtimeMultiPerson2019
 \section{Content}
 This is the body content.
