--- a/document/references.bib
+++ b/document/references.bib
@@ -10,3 +10,19 @@
   copyright = {arXiv.org perpetual, non-exclusive license},
   keywords = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences}
 }
+
+@article{matthis2018GazeControlFoot,
+  title = {Gaze and the {{Control}} of {{Foot Placement When Walking}} in {{Natural Terrain}}},
+  author = {Matthis, Jonathan Samir and Yates, Jacob L. and Hayhoe, Mary M.},
+  year = {2018},
+  month = apr,
+  journal = {Current Biology},
+  volume = {28},
+  number = {8},
+  pages = {1224-1233.e5},
+  issn = {09609822},
+  doi = {10.1016/j.cub.2018.03.008},
+  urldate = {2024-07-26},
+  langid = {english},
+  file = {C:\Users\jonma\Zotero\storage\X6UWPT27\Matthis et al. - 2018 - Gaze and the Control of Foot Placement When Walkin.pdf}
+}
