--- a/document/references.bib
+++ b/document/references.bib
@@ -12,7 +12,7 @@
 }
 
 @article{matthis2018GazeControlFoot,
-  title = {Gaze and the {{Control}} of {{Foot Placement When Walking}} in {{Natural Terrain}}},
+  title = {{{Gaze}} and the {{Control}} of {{Foot Placement When Walking}} in {{Natural Terrain}}},
   author = {Matthis, Jonathan Samir and Yates, Jacob L. and Hayhoe, Mary M.},
   year = {2018},
   month = apr,
