--- a/document/main_freemocap_nsf_pose_2024.tex
+++ b/document/main_freemocap_nsf_pose_2024.tex
@@ -23,4 +23,9 @@
 % Include body file
 \input{body/body}
 
+\newpage
+% Bibliography section
+\bibliographystyle{plain}
+\bibliography{references}
+
 \end{document}
