--- a/document/body/body.tex
+++ b/document/body/body.tex
@@ -2,7 +2,7 @@
 \section{Introduction}
 This is the introduction section. Wow. dd. ok 
 
-\cite{matthis2018GazeControlFoot}
+\cite{matthis2018}
 
 \section{Content}
 This is the body content.
