--- a/document/references.bib
+++ b/document/references.bib
@@ -1,4 +1,4 @@
-@misc{cao2018OpenPoseRealtimeMultiPerson,
+@misc{cao2018,
   title = {{{OpenPose}}: {{Realtime Multi-Person 2D Pose Estimation}} Using {{Part Affinity Fields}}},
   shorttitle = {{{OpenPose}}},
   author = {Cao, Zhe and Hidalgo, Gines and Simon, Tomas and Wei, Shih-En and Sheikh, Yaser},
@@ -11,8 +11,8 @@
   keywords = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences}
 }
 
-@article{matthis2018GazeControlFoot,
-  title = {{{Gaze}} and the {{Control}} of {{Foot Placement When Walking}} in {{Natural Terrain}}},
+@article{matthis2018,
+  title = {Gaze and the {{Control}} of {{Foot Placement When Walking}} in {{Natural Terrain}}},
   author = {Matthis, Jonathan Samir and Yates, Jacob L. and Hayhoe, Mary M.},
   year = {2018},
   month = apr,
