--- a/document/body/body.tex
+++ b/document/body/body.tex
@@ -6,3 +6,8 @@ This is the introduction section. Wow. dd. ok
 
 \section{Content}
 This is the body content.
+
+\newpage
+% Bibliography section
+\bibliographystyle{plain}
+\bibliography{references}
