--- a/document/body/body.tex
+++ b/document/body/body.tex
@@ -1,8 +1,6 @@
 % Your main document content
 \section{Introduction}
-This is the introduction section. Wow. dd. ok 
-
-\cite{matthis2018}
+This is the introduction section. Wow. dd. ok \cite{matthis2018}
 
 \section{Content}
 This is the body content.
