--- a/proposal-components/project-description.tex
+++ b/proposal-components/project-description.tex
@@ -1,9 +1,6 @@
 \documentclass[11pt]{article}
-\usepackage{amsmath}
-\usepackage{graphicx}
 \usepackage[letterpaper,margin=1in]{geometry}
-\newcommand{\pseudodot}{{\lower 2.4pt\hbox{$\cdot$}}}
-
+\usepackage{}
 \begin{document}
 \pagestyle{empty} 
 \setlength{\baselineskip}{12.6pt} % in text mode
