--- a/proposal-components/project-description.tex
+++ b/proposal-components/project-description.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{article}
 \usepackage[letterpaper,margin=1in]{geometry}
-\usepackage{}
+\usepackage{natbib}
 \begin{document}
 \pagestyle{empty} 
 \setlength{\baselineskip}{12.6pt} % in text mode
