--- a/proposal-components/project-description.tex
+++ b/proposal-components/project-description.tex
@@ -6,7 +6,7 @@
 \setlength{\baselineskip}{12.6pt} % in text mode
 
 \section{Introduction}
-This is the introduction section. Wow. dd. ok \cite{matthis2018,matthis2022}
+This is the introduction section. Wow. dd. ok \cite{matthis2018}
 
 \section{Content}
 This is the body content.
