--- a/proposal-components/project-description.tex
+++ b/proposal-components/project-description.tex
@@ -1,20 +1,20 @@
 \documentclass[11pt]{article}
 \usepackage[letterpaper,margin=1in]{geometry}
 \usepackage{natbib}
+
 \begin{document}
 \pagestyle{empty} 
 \setlength{\baselineskip}{12.6pt} % in text mode
 
 \section{Introduction}
-This is the introduction section. Wow. dd. ok \cite{matthis2018}
+This is the introduction section. Wow. \cite{matthis2018}
 
 \section{Content}
 This is the body content.
 
 \newpage
 % Bibliography section
-\bibliographystyle{plain}
+\bibliographystyle{apalike}
 \bibliography{references}
-
 
 \end{document}
