--- a/proposal-components/project-description.tex
+++ b/proposal-components/project-description.tex
@@ -8,10 +8,21 @@
 \setlength{\baselineskip}{12.6pt} % in text mode
 
 \section{Introduction}
-This is the introduction section. Wow. \cite{matthis2018}
+Gap/Need/Hero statements
 
-\section{Content}
-This is the body content.
+\section{Intellectual Merit}
+ How we will advance knowledge
+
+\section{Broader Impacts}
+ How we will help world
+
+\section{Objectives}
+What we will do 
+
+\newpage
+
+\section{Current Context}
+
 
 \newpage
 % Bibliography section
