starting basic structure

--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -25,19 +25,30 @@
 \pagestyle{empty} 
 \setlength{\baselineskip}{12.6pt} 
 
+
 \section{Introduction\label{sec:intro}}
-
-hi  \cite{matthis_gaze_2018}
-\footnote{I'm a footnote}
+Context/Need/Gap/Hero Funnel
 
 
-\subsection{Subsection}
- Wow \cite{cao_openpose_2018}
+\subsection{Intellectual Merit\label{sec:IM}}
+How we will advance knowledge
 
 
 \section{Broader Impacts\label{sec:BI}}
+How we will help the world
 
-Broder impocts
+\section{Objectives}
+ Like Specific Aims - what are the primary activities/deliverables?
+
+\newpage
+
+\section{Current Context}
+\subsection{Technological Context}
+\subsection{Social Context}
+\subsection{Ethical Context}
+\subsubsection{The Problem of Universities}
+\subsubsection{The Problem of Journals}
+\subsubsection{On Gardens and Cottage Industries}
 
 \newpage
 \printbibliography
