document building locally :)

--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -49,6 +49,7 @@ How we will help the world
 \subsubsection{The Problem of Universities}
 \subsubsection{The Problem of Journals}
 \subsubsection{On Gardens and Cottage Industries}
+\subsection{Need and Gap}
 
 \newpage
 \printbibliography
