--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -27,7 +27,7 @@
 
 
 \section{Introduction\label{sec:intro}}
-Context/Need/Gap/Hero Funnel
+Context/Need/Gap/Hero Funnel \cite{matthis_retinal_2022}
 
 
 \subsection{Intellectual Merit\label{sec:IM}}
