outlined project description

--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -31,7 +31,7 @@ Context/Need/Gap/Hero Funnel. \cite{matthis_retinal_2022}
 
 
 \subsection{Intellectual Merit\label{sec:IM}}
-How we will advance knowledge
+How we will advance knowledge 
 
 
 \section{Broader Impacts\label{sec:BI}}
@@ -50,6 +50,77 @@ How we will help the world
 \subsubsection{The Problem of Journals}
 \subsubsection{On Gardens and Cottage Industries}
 \subsection{Need and Gap}
+
+\section{Objectives and Long term vision}
+\subsection{Aspirational Goals}
+\subsubsection{FreeMoCap => Best MoCap}
+\subsubsection{All-levels accessible}
+\subsubsection{Covert Education}
+\subsubsection{Generative Organzational Structure}
+
+
+\section{Guiding Principles}
+\subsection{Universal Design / Universal Access}
+\subsection{No artificial scarcity}
+\subsection{Community Focus}
+\subsection{Aggressively Open Source}
+
+\section{The FreeMoCap Project (FMC)}
+\subsection{Artifacts}
+
+\subsubsection{FreeMoCap Softwares}
+\subsubsubsection{FreeMoCap Core Software (FMC-Core)}
+\subsubsubsection{Sub-Skelly Softwares}
+
+\subsubsection{Documentation and Educational Material}
+
+\subsubsection{Datasets and derived models}
+
+
+\subsection{The FreeMoCap Community (FMC-C)}
+
+\subsection{The FreeMoCap Foundation (FMC-F)}
+\subsubsection{Organization}
+\subsubsection{Governance}
+\subsubsection{Responsibilities}
+\subsubsection{Licensing Model}
+
+\section{Planned Activitites and Objectives}
+
+\subsection{Ecosustem establishment and growth}
+\subsubsection{Userbase Analysis/Engagement}
+\subsubsection{AI Psuedo-Mentorship (SkellyBot)}
+
+\subsection{Community Building}
+\subsubsection{Annual Workshop/Conference: FreeMoCamp/Con}
+\subsubsection{Community Challenges}
+\subsubsection{Community Grants Program}
+\subsubsection{Gamification and acheivement-based badges}
+
+\subsection{Organization and Governance}
+\subsubsection{Build admin infrastrcutre}
+\subsubsection{Develop SOPs}
+\subsubsection{Establish core maintainer roles and support}
+\subsubsection{Develop 'Skelly Enhancement Proposal'[SEP] system}
+
+\subsection{Continuous Development, integration, Evaluation}
+\subsubsection{Development}
+\subsubsection{Integration}
+\subsubsection{Evaluation}
+\subsubsubsection{Tests}
+\subsubsubsection{Validation}
+\subsubsubsection{Diagnostics}
+
+\subsection{Sustainability}
+\subsubsection{Goals and Metrics}
+\subsubsubsection{Community Growth}
+\subsubsubsection{Organizational Stability}
+\subsubsubsection{Software Performance}
+\subsubsubsection{Revenue streams}
+
+\subsection{Security and Privacy}
+\subsection{Security}
+\subsection{Privacy}
 
 \newpage
 \printbibliography
