--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -69,8 +69,8 @@ How we will help the world
 \subsection{Artifacts}
 
 \subsubsection{FreeMoCap Softwares}
-\subsubsubsection{FreeMoCap Core Software (FMC-Core)}
-\subsubsubsection{Sub-Skelly Softwares}
+\paragraph{FreeMoCap Core Software (FMC-Core)}
+\paragraph{Sub-Skelly Softwares}
 
 \subsubsection{Documentation and Educational Material}
 
