--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -107,16 +107,16 @@ How we will help the world
 \subsubsection{Development}
 \subsubsection{Integration}
 \subsubsection{Evaluation}
-\subsubsubsection{Tests}
-\subsubsubsection{Validation}
-\subsubsubsection{Diagnostics}
+\paragraph{Tests.}
+\paragraph{Validation.}
+\paragraph{Diagnostics.}
 
 \subsection{Sustainability}
 \subsubsection{Goals and Metrics}
-\subsubsubsection{Community Growth}
-\subsubsubsection{Organizational Stability}
-\subsubsubsection{Software Performance}
-\subsubsubsection{Revenue streams}
+\paragraph{Community Growth.}
+\paragraph{Organizational Stability.}
+\paragraph{Software Performance.}
+\paragraph{Revenue streams.}
 
 \subsection{Security and Privacy}
 \subsection{Security}
