--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -27,15 +27,58 @@
 
 
 \section{Introduction\label{sec:intro}}
-Context/Need/Gap/Hero Funnel. \cite{matthis_retinal_2022}
+ Context/Need/Gap/Hero Funnel. 
+ sample citation: \cite{matthis_retinal_2022} 
+%# Will probably need tightening and focusing on FMC/OSE
 
+- Our current institutions of education and scientific research are inequitable, exclusionary by design, and ill-equipped to address the existential threats and transformative opportunities presented by the rise and spread of high technology through a globally interconnected world. 
+
+- The current system is a built around a massive concentration of resources within Ivory-tower institutions, with research occuring in siloed 'cottage industries' driven by student labor and debt within a gerontocratic ponzi-scheme competition based heirarchy predicated on the assumption of lateral competition predicated on assumptions of false scarcity. 
+
+- To face the rising challenges and seize the opportunities, we must develop new institutional structures based on a commitment to the values of \it{Universal Access} and \it{Universal Design}. 
+
+%% A little more about these institutions and what they will need to look like, etc. bridgeing the 'scale gap' and all that - need for focus of purpose and expansive impact 
+
+- In this proposal, we present a potential model of an Open Source Ecosystem (OSE) as a prototype organization structured in service of these needs. 
+
+- Specifically, we descripbe a plan to buttress and shape the burdgeoning community of users, developers, students, and educators forming around the FreeMoCap Project (FMC) into a self-sustaining and expansive Open Source Ecosystem (OSE). 
+% - Current model not fit for present and future needs
+% - Need alternative models, organizations, infrastructures for science and education
+
+%   - Generative and self sustaining
+%     - Von Neumann machine - Sustainibility through replicability
+%   - As Autonomous As Possible (allow the fewest to do the most)
+%   - Topic/software/hardware agnostic
+%   - Multi-scale adaptable, extensible, maintainable, and replicable [SEP]
+% - Two Loops theory of social progress
+
+%   - Not saying we should burn it all to the ground
+%     - It's already burning
+%   - We need to build a better ship
+%     - & f-ing ASAP plz thx
+
+- Our plan comprises 3 inter-woven foci - 
+- A core software platform and framework for the measurement, analysis, and visualization of human and animal movement (FMC-Core)
+- A broad and diverse userbase representing wide array of backgrounds, interests, experience levels, and geographic sprea (FMC-Community)
+- A self-sustaining organization to support a dedicated team of core maintainers who ensure the healthy growth and long-term stability of the ecosystem (FMC-Foundation)
 
 \subsection{Intellectual Merit\label{sec:IM}}
-How we will advance knowledge 
+% How we will advance knowledge 
 
+- Enablabling tech-forward integrative research
+- Rosetta Stones and Systems Engineers
+- Training nextgen technowizards and cross-disciplinarians
 
 \section{Broader Impacts\label{sec:BI}}
-How we will help the world
+- **Meager success:**
+  - New useful tool
+  - New body of research realted to human/animation perceptuomotor control
+  - Education tools and strategy
+- **Expected outcomes:**
+  - Support and sustain the growing community of `freemocap` users, loosely organized around a shared love of the measurement, investigation, analysis, and expression of human and animal movement (broadly construed) 
+  - Sustainable organization and vibrant ecosystem existing as a proof-of-concept alternative organizational approach to broadscale academic research, education, and training
+- **Idealist future:**
+  - Iterative solutions on 'project-scale' strategy produces a vibrant **ecosystem of ecosystems** which fundamentally changes the face of education and scientific research.
 
 \section{Objectives}
  Like Specific Aims - what are the primary activities/deliverables?
@@ -53,8 +96,8 @@ How we will help the world
 
 \section{Objectives and Long term vision}
 \subsection{Aspirational Goals}
-\subsubsection{FreeMoCap => Best MoCap}
-\subsubsection{All-levels accessible}
+\subsubsection{FreeMoCap => Best MoCap (monotonically increasing performance)}
+\subsubsection{All-levels accessible (universal access)}
 \subsubsection{Covert Education}
 \subsubsection{Generative Organzational Structure}
 
@@ -65,7 +108,9 @@ How we will help the world
 \subsection{Community Focus}
 \subsection{Aggressively Open Source}
 
+
 \section{The FreeMoCap Project (FMC)}
+
 \subsection{Artifacts}
 
 \subsubsection{FreeMoCap Softwares}
