--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -81,7 +81,17 @@
   - Iterative solutions on 'project-scale' strategy produces a vibrant **ecosystem of ecosystems** which fundamentally changes the face of education and scientific research.
 
 \section{Objectives}
- Like Specific Aims - what are the primary activities/deliverables?
+ - Technical Objectives
+    - CI/CD
+    - Sub-skellies
+    - Documentation and onboarding
+    - 
+ - Community Development
+    - User trajectory shaping
+    - Community support Activitites
+ - Organizational 
+    - Setting up FMC0-f
+    - Define and support core maintainer team
 
 \newpage
 
