--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -85,10 +85,13 @@
     - CI/CD
     - Sub-skellies
     - Documentation and onboarding
-    - 
+
  - Community Development
-    - User trajectory shaping
+    - User XP tracking and educational trajectory shaping
     - Community support Activitites
+      - Community grants Program
+      - Community challenges program 
+      - 
  - Organizational 
     - Setting up FMC0-f
     - Define and support core maintainer team
