--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -81,19 +81,22 @@
   - Iterative solutions on 'project-scale' strategy produces a vibrant **ecosystem of ecosystems** which fundamentally changes the face of education and scientific research.
 
 \section{Objectives}
+
+Transition from Stadium to Federation \cite{wor}
+
+
  - Technical Objectives
     - CI/CD
     - Sub-skellies
     - Documentation and onboarding
-
  - Community Development
     - User XP tracking and educational trajectory shaping
     - Community support Activitites
       - Community grants Program
       - Community challenges program 
-      - 
+      - FreeMoCamp/Con
  - Organizational 
-    - Setting up FMC0-f
+    - Setting up FMC-F
     - Define and support core maintainer team
 
 \newpage
