--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -82,7 +82,7 @@
 
 \section{Objectives}
 
-Transition from Stadium to Federation \cite{wor}
+Transition from Stadium to Federation \cite{}
 
 
  - Technical Objectives
