--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -10,7 +10,7 @@
 \usepackage{vmargin} % To set page size
 
 % Set up bibliography: https://www.overleaf.com/learn/latex/Bibliography_management_in_LaTeX
-\usepackage[backend=biber]{biblatex}
+\usepackage[backend=biber]{biblatex} 
 \addbibresource{../references.bib}
 
 
@@ -31,7 +31,7 @@
  sample citation: \cite{matthis_retinal_2022} 
 %# Will probably need tightening and focusing on FMC/OSE
 
-- Our current institutions of education and scientific research are inequitable, exclusionary by design, and ill-equipped to address the existential threats and transformative opportunities presented by the rise and spread of high technology through a globally interconnected world. 
+- Our current institutions of education and scientific research are inequitable, exclusionary by design, and ill-equipped to address the existential threats and transformative opportunities presented by the rise and spread of high technology through a globally interconnected world
 
 - The current system is a built around a massive concentration of resources within Ivory-tower institutions, with research occuring in siloed 'cottage industries' driven by student labor and debt within a gerontocratic ponzi-scheme competition based heirarchy predicated on the assumption of lateral competition predicated on assumptions of false scarcity. 
 
