--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -39,9 +39,9 @@
 
 %% A little more about these institutions and what they will need to look like, etc. bridgeing the 'scale gap' and all that - need for focus of purpose and expansive impact 
 
-- In this proposal, we present a potential model of an Open Source Ecosystem (OSE) as a prototype organization structured in service of these needs. 
+In this proposal, we present a potential model of an Open Source Ecosystem (OSE) as a prototype organization structured in service of these needs. 
 
-- Specifically, we descripbe a plan to buttress and shape the burdgeoning community of users, developers, students, and educators forming around the FreeMoCap Project (FMC) into a self-sustaining and expansive Open Source Ecosystem (OSE). 
+Specifically, we descripbe a plan to buttress and shape the burdgeoning community of users, developers, students, and educators forming around the FreeMoCap Project (FMC) into a self-sustaining and expansive Open Source Ecosystem (OSE). 
 % - Current model not fit for present and future needs
 % - Need alternative models, organizations, infrastructures for science and education
 
