--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -14,7 +14,7 @@
 \addbibresource{../references.bib}
 
 
-\hypersetup{colorlinks=true,linkcolor=blue,urlcolor=blue}
+\hypersetup{colorlinks=true,linkcolor=blue,urlcolor=blue} 
 
 \setpapersize{USletter}
 \setmarginsrb{1in}{1in}{1in}{1in}{0pt}{0mm}{0pt}{0mm}
@@ -39,9 +39,9 @@
 
 %% A little more about these institutions and what they will need to look like, etc. bridgeing the 'scale gap' and all that - need for focus of purpose and expansive impact 
 
-In this proposal, we present a potential model of an Open Source Ecosystem (OSE) as a prototype organization structured in service of these needs. 
+- In this proposal, we present a potential model of an Open Source Ecosystem (OSE) as a prototype organization structured in service of these needs. 
 
-Specifically, we descripbe a plan to buttress and shape the burdgeoning community of users, developers, students, and educators forming around the FreeMoCap Project (FMC) into a self-sustaining and expansive Open Source Ecosystem (OSE). 
+- Specifically, we descripbe a plan to buttress and shape the burdgeoning community of users, developers, students, and educators forming around the FreeMoCap Project (FMC) into a self-sustaining and expansive Open Source Ecosystem (OSE). 
 % - Current model not fit for present and future needs
 % - Need alternative models, organizations, infrastructures for science and education
 
@@ -82,7 +82,7 @@ Specifically, we descripbe a plan to buttress and shape the burdgeoning communit
 
 \section{Objectives}
 
-Transition from Stadium to Federation \cite{eghbal2020}
+Transition from Stadium to Federation \cite{}
 
 
  - Technical Objectives
