--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -31,17 +31,17 @@
  sample citation: \cite{matthis_retinal_2022} 
 %# Will probably need tightening and focusing on FMC/OSE
 
-Our current institutions of education and scientific research are inequitable, exclusionary by design, and ill-equipped to address the existential threats and transformative opportunities presented by the rise and spread of high technology through a globally interconnected world
+Our current institutions of education and scientific research are inequitable, exclusionary by design, and ill-equipped to address the existential threats and transformative opportunities presented by the rise and spread of high technology through a globally interconnected world.
 
 The current system is a built around a massive concentration of resources within Ivory-tower institutions, with research occuring in siloed 'cottage industries' driven by student labor and debt within a gerontocratic ponzi-scheme competition based heirarchy predicated on the assumption of lateral competition predicated on assumptions of false scarcity. 
 
-To face the rising challenges and seize the opportunities, we must develop new institutional structures based on a commitment to the values of \it{Universal Access} and \it{Universal Design}. 
+To face the rising challenges and seize the opportunities, we must develop new institutional structures based on a commitment to the values of \textit{Universal Access} and \textit{Universal Design}. 
 
 %% A little more about these institutions and what they will need to look like, etc. bridgeing the 'scale gap' and all that - need for focus of purpose and expansive impact 
 
 In this proposal, we present a potential model of an Open Source Ecosystem (OSE) as a prototype organization structured in service of these needs. 
 
-Specifically, we descripbe a plan to buttress and shape the burdgeoning community of users, developers, students, and educators forming around the FreeMoCap Project (FMC) into a self-sustaining and expansive Open Source Ecosystem (OSE). 
+Specifically, we descripbe a plan to buttress and shape the burdgeoning community of users, developers, students, and educators forming around the \textbf{FreeMoCap Project (FMC)} into a self-sustaining and expansive Open Source Ecosystem (OSE). 
 
 % - Current model not fit for present and future needs
 % - Need alternative models, organizations, infrastructures for science and education
@@ -58,10 +58,13 @@ Specifically, we descripbe a plan to buttress and shape the burdgeoning communit
 %   - We need to build a better ship
 %     - & f-ing ASAP plz thx
 
-- Our plan comprises 3 inter-woven foci - 
-- A core software platform and framework for the measurement, analysis, and visualization of human and animal movement (FMC-Core)
-- A broad and diverse userbase representing wide array of backgrounds, interests, experience levels, and geographic sprea (FMC-Community)
-- A self-sustaining organization to support a dedicated team of core maintainers who ensure the healthy growth and long-term stability of the ecosystem (FMC-Foundation)
+Our plan comprises 3 inter-woven foci - 
+\begin{enumerate}
+  \item A core software platform and framework for the measurement, analysis, and visualization of human and animal movement (FMC-Core)
+  \item A broad and diverse userbase representing wide array of backgrounds, interests, experience levels, and geographic sprea (FMC-Community)
+  \item A self-sustaining organization to support a dedicated team of core maintainers who ensure the healthy growth and long-term stability of the ecosystem (FMC-Foundation)
+\end{enumerate}
+
 
 \subsection{Intellectual Merit\label{sec:IM}}
 % How we will advance knowledge 
