adding to objectives

--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -84,16 +84,28 @@ Our plan comprises 3 inter-woven foci -
 - **Idealist future:**
   - Iterative solutions on 'project-scale' strategy produces a vibrant **ecosystem of ecosystems** which fundamentally changes the face of education and scientific research.
 
-\section{Objectives}
+\section{Objectives} 
 
-Transition from Stadium to Federation \cite{}
+\subsubsection{\textbf{FreeMoCap Software [FMC-S]}}
+\textbf{Aspirational Goals}
+\begin{itemize}
+  \item \textbf{All Levels Accessible.} FreeMoCap is usable by a 13-year old with no technical training and no outside assistance.
+  \item \textbf{FreeMoCap == Best MoCap} FreeMoCap is the best motion capture software available for any application at any price
+\end{itemize}
 
+\textbf{Specific Activitites}
+\begin{itemize}
+  \item Develop a sophisticated, extensible, and fastidiously document system of continuous developmenet, integration, testing, and diagnostics
+  \item Develop and refine fractal polyrepo structure whereby the core software comprises a set of independent sub-repositories with a shared infrastructure.
+  \item 
+\end{itemize}
 
  - Technical Objectives
     - CI/CD
     - Sub-skellies
     - Documentation and onboarding
  - Community Development
+    - Transition from Stadium to Federation \cite{egbahl2020}
     - User XP tracking and educational trajectory shaping
     - Community support Activitites
       - Community grants Program
