Updates from Overleaf

--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -113,10 +113,10 @@ How we will help the world
 
 \subsection{Sustainability}
 \subsubsection{Goals and Metrics}
-\paragraph{Community Growth.}
-\paragraph{Organizational Stability.}
-\paragraph{Software Performance.}
-\paragraph{Revenue streams.}
+\paragraph{Growth}
+\paragraph{Stability}
+\paragraph{Performance}
+\paragraph{Revenue}
 
 \subsection{Security and Privacy}
 \subsection{Security}
