why no gitdoc?!

--- a/document/project-description/project-description.tex
+++ b/document/project-description/project-description.tex
@@ -95,9 +95,10 @@ Our plan comprises 3 inter-woven foci -
 
 \textbf{Specific Activitites}
 \begin{itemize}
-  \item Develop a sophisticated, extensible, and fastidiously document system of continuous developmenet, integration, testing, and diagnostics
-  \item Develop and refine fractal polyrepo structure whereby the core software comprises a set of independent sub-repositories with a shared infrastructure.
-  \item 
+  \item \textbf{Automate Everything} Develop a sophisticated, extensible, and fastidiously documented system of continuous developmenet, integration, testing, validation, and diagnostics
+  \item \textbf{Coherent poly-repo format} Develop and refine fractal polyrepo structure whereby the core software comprises a set of independent sub-repositories with a shared infrastructure with plugin and contribution templates
+  \item \textbf{Monotonically increasing performance} Automated disganostics and validation tests on each version bump, maximum performance tracked over time should never decrease. 
+  \item \textbf{Docs Docs Docs.} Manage docs repo like the rest of the codebase, and treat our documentation, educational content, tutorials, and onboarding material as a core artifact. 
 \end{itemize}
 
  - Technical Objectives
